login and authentification works

--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                 <button class="login-btn" mat-raised-button (click)="registerDialog()">
                 <mat-icon>how_to_reg</mat-icon>Register
                 </button>
-                <button class="login-btn" mat-raised-button (click)="loginDialog()">
+                <button class="login-btn" mat-raised-button>
                     <mat-icon>login</mat-icon>Login
                 </button>
             </div>
