--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -1,11 +1,11 @@
 <!-- WELCOME OVERLAY -->
 <div id="boardOverlay" [ngClass]="{
-    'board-overlay': currentTheme === 'default',
-    'board-overlay-light': currentTheme === 'light-theme',
-    'board-overlay-dark': currentTheme === 'dark-theme',
-    'slide-out': hideWelcomeOverlay
+  'board-overlay': currentTheme === 'default',
+  'board-overlay-light': currentTheme === 'light-theme',
+  'board-overlay-dark': currentTheme === 'dark-theme',
+  'slide-out': hideWelcomeOverlay
 }" class="board-overlay" [style.visibility]="hideWelcomeOverlay ? 'hidden' : 'visible'">
-    Welcome Ben
+  Welcome {{ username }}
 </div>
 
 <!-- LOG OUT OVERLAY -->
@@ -68,7 +68,7 @@
 
 <div [ngClass]="getThemeClass('board-user')" class="flex-c-c">
     <div class="hud">
-      <h1>Welcome Ben</h1>
+      <h1>Welcome {{ username }}</h1>
       <div class="flex-btw-c">{{ taskService.urgentCount$ | async }} Urgent</div>
       <div class="flex-btw-c">{{ taskService.todoCount$ | async }} To-Do</div>
       <div class="flex-btw-c">{{ taskService.inProgressCount$ | async }} In Progress</div>
