--- a/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
+++ b/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
@@ -1,23 +1,28 @@
 <h2 mat-dialog-title>Registration</h2>
 <mat-dialog-content>
-
   <div>
     <mat-form-field>
       <mat-label>First name</mat-label>
-      <input matInput>
+      <input matInput [(ngModel)]="firstName">
     </mat-form-field>
     <mat-form-field>
       <mat-label>Last name</mat-label>
-      <input matInput>
+      <input matInput [(ngModel)]="lastName">
     </mat-form-field>
-
     <mat-form-field>
       <mat-label>E-Mail</mat-label>
-      <input matInput>
+      <input matInput [(ngModel)]="email">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Username</mat-label>
+      <input matInput [(ngModel)]="username">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput type="password" [(ngModel)]="password">
     </mat-form-field>
   </div>
 </mat-dialog-content>
-
 <mat-dialog-actions class="register-btn-container">
   <button class="login-btn" mat-button mat-dialog-close>
     <mat-icon>close</mat-icon>Cancel
