--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -2,13 +2,13 @@
     <div class="outer-wrapper--login">
         <h1>Login to Board</h1>
 
-        <form (ngSubmit)="login()">
+        <form (ngSubmit)="login()" #loginForm="ngForm">
             <mat-form-field>
-                <mat-label>Username</mat-label><input matInput type="text" name="username" [(ngModel)]="username">
+                <mat-label>Username</mat-label><input matInput type="text" name="username" [(ngModel)]="username" required>
             </mat-form-field>
 
             <mat-form-field>
-                <mat-label>Password</mat-label><input matInput type="password" name="password" [(ngModel)]="password">
+                <mat-label>Password</mat-label><input matInput type="password" name="password" [(ngModel)]="password" required>
             </mat-form-field>
 
             <mat-form-field>
@@ -21,10 +21,10 @@
             </mat-form-field>
 
             <div class="flex-c-c gap-32">
-                <button class="login-btn" mat-raised-button (click)="registerDialog()">
+                <button class="login-btn" mat-raised-button (click)="registerDialog()" type="button">
                 <mat-icon>how_to_reg</mat-icon>Register
                 </button>
-                <button class="login-btn" mat-raised-button>
+                <button class="login-btn" mat-raised-button type="submit" [disabled]="!loginForm.valid" [class.login-btn-disabled]="!loginForm.valid">
                     <mat-icon>login</mat-icon>Login
                 </button>
             </div>
