fix update function for Date object/string, but one bug is left

--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -159,8 +159,7 @@
                                 'board-card-date-dark': currentTheme === 'dark-theme',
                                 'overdue-date': taskService.isDatePast(task.date)
                               }" class="board-card-date">
-                              <input type="date" [(ngModel)]="task.date" [disabled]="!task.isEditMode"
-                              (change)="taskService.onDateChange($event, task)">                            
+                              <input type="date" [(ngModel)]="task.date" [disabled]="!task.isEditMode" (change)="taskService.onDateChange($event, task)">                        
                       </div>
                     </mat-card-content>
                     <mat-card-actions class="board-col-tools">
