fix all the update bugs

--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -159,7 +159,7 @@
                                 'board-card-date-dark': currentTheme === 'dark-theme',
                                 'overdue-date': taskService.isDatePast(task.date)
                               }" class="board-card-date">
-                              <input type="date" [(ngModel)]="task.date" [disabled]="!task.isEditMode" (change)="taskService.onDateChange($event, task)">                        
+                        <input type="date" name="taskDate" [value]="task.date | date:'yyyy-MM-dd'" [disabled]="!task.isEditMode" (input)="taskService.onDateChange($event, task)">
                       </div>
                     </mat-card-content>
                     <mat-card-actions class="board-col-tools">
@@ -254,8 +254,7 @@
                                 'board-card-date-dark': currentTheme === 'dark-theme',
                                 'overdue-date': taskService.isDatePast(task.date)
                               }" class="board-card-date">
-                        <input type="date" [(ngModel)]="task.date" [disabled]="!task.isEditMode"
-                          (change)="taskService.onDateChange($event, task)">
+                        <input type="date" name="taskDate" [value]="task.date | date:'yyyy-MM-dd'" [disabled]="!task.isEditMode" (input)="taskService.onDateChange($event, task)">
                       </div>
                     </mat-card-content>
                     <mat-card-actions class="board-col-tools">
@@ -352,8 +351,7 @@
                                 'board-card-date-dark': currentTheme === 'dark-theme',
                                 'overdue-date': taskService.isDatePast(task.date)
                               }" class="board-card-date">
-                        <input type="date" [(ngModel)]="task.date" [disabled]="!task.isEditMode"
-                          (change)="taskService.onDateChange($event, task)">
+                        <input type="date" name="taskDate" [value]="task.date | date:'yyyy-MM-dd'" [disabled]="!task.isEditMode" (input)="taskService.onDateChange($event, task)">
                       </div>
                     </mat-card-content>
                     <mat-card-actions class="board-col-tools">
@@ -440,8 +438,7 @@
                                               'board-card-date-dark': currentTheme === 'dark-theme',
                                               'overdue-date': taskService.isDatePast(task.date)}"
                         class="board-card-date">
-                        <input type="date" [value]="task.date | date:'yyyy-MM-dd'"
-                          (change)="taskService.onDateChange($event, task)">
+                        <input type="date" name="taskDate" [value]="task.date | date:'yyyy-MM-dd'" [disabled]="!task.isEditMode" (input)="taskService.onDateChange($event, task)">
                       </div>
                     </mat-card-content>
                     <mat-card-actions class="board-col-tools">
