--- a/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
+++ b/kanban-frondend/src/app/components/dialog-register/dialog-register.component.html
@@ -1,33 +1,72 @@
 <h2 mat-dialog-title>Registration</h2>
-<mat-dialog-content>
-  <div>
-    <mat-form-field>
-      <mat-label>First name</mat-label>
-      <input matInput [(ngModel)]="firstName">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Last name</mat-label>
-      <input matInput [(ngModel)]="lastName">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>E-Mail</mat-label>
-      <input matInput [(ngModel)]="email">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Username</mat-label>
-      <input matInput [(ngModel)]="username">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput type="password" [(ngModel)]="password">
-    </mat-form-field>
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions class="register-btn-container">
-  <button class="login-btn" mat-button mat-dialog-close>
-    <mat-icon>close</mat-icon>Cancel
-  </button>
-  <button class="login-btn" mat-button (click)="register()">
-    <mat-icon>check</mat-icon>Register
-  </button>
-</mat-dialog-actions>
+<form [formGroup]="registerForm" (ngSubmit)="register()">
+  <mat-dialog-content>
+    <div>
+      <mat-form-field>
+        <mat-label>First name</mat-label>
+        <input matInput formControlName="firstName" type="text" required minlength="3" maxlength="12">
+        <mat-error *ngIf="registerForm.get('firstName')?.hasError('minlength')">
+          First name must be at least 3 characters long.
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('firstName')?.hasError('maxlength')">
+          First name cannot be more than 12 characters long.
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('firstName')?.hasError('forbiddenCharacters')">
+          First name contains forbidden characters.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Last name</mat-label>
+        <input matInput formControlName="lastName" type="text" required minlength="3" maxlength="12">
+        <mat-error *ngIf="registerForm.get('lastName')?.hasError('minlength')">
+          Last name must be at least 3 characters long.
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('lastName')?.hasError('maxlength')">
+          Last name cannot be more than 12 characters long.
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('lastName')?.hasError('forbiddenCharacters')">
+          Last name contains forbidden characters.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>E-Mail</mat-label>
+        <input matInput formControlName="email" type="email" required>
+        <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
+          Please enter a valid email address.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Username</mat-label>
+          <input matInput formControlName="username" type="text" required minlength="3" maxlength="12">
+          <mat-error *ngIf="registerForm.get('username')?.hasError('minlength')">
+            Username must be at least 3 characters long.
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('username')?.hasError('maxlength')">
+            Username cannot be more than 12 characters long.
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('username')?.hasError('forbiddenCharacters')">
+            Username contains forbidden characters.
+          </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput formControlName="password" type="password" required minlength="3" maxlength="12">
+        <mat-error *ngIf="registerForm.get('password')?.hasError('minlength')">
+          Password must be at least 3 characters long.
+        </mat-error>
+        <mat-error *ngIf="registerForm.get('password')?.hasError('maxlength')">
+          Password cannot be more than 12 characters long.
+        </mat-error>
+      </mat-form-field>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions class="register-btn-container">
+    <button class="login-btn" mat-button mat-dialog-close type="button">
+      <mat-icon>close</mat-icon>Cancel
+    </button>
+    <button class="login-btn" mat-button [disabled]="!registerForm.valid"
+      [class.login-btn-disabled]="!registerForm.valid" type="submit">
+      <mat-icon>check</mat-icon>Register
+    </button>
+  </mat-dialog-actions>
+</form>
